test/pass/special-chars.min
program
start
 '\a' '\n' '\a7' '\\' '\'' !
end
