test/fail/repeated2.min
program
    number n; number n
start

end
